--- a/index.html
+++ b/index.html
@@ -10,16 +10,38 @@
 <body>
     <nav id="navbar">
         <header>JS Documentation</header>
-        <a class="nav-link" href="#Introduction">Introduction</a>
-        <a class="nav-link" href="#What_you_should_already_know">What you should already know</a>
-        <a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a>
-        <a class="nav-link" href="#Hello_world">Hello world</a>
-        <a class="nav-link" href="#Variables">Variables</a>
-        <a class="nav-link" href="#Declaring_variables">Declaring variables</a>
-        <a class="nav-link" href="#Variable_scope">Variable scop
-        <a class="nav-link" href="#Global_variables">Global variables</a>
-        <a class="nav-link" href="#Constants">Constants</a>
-        <a class="nav-link" href="#Data_types">Data types</a>
+        <ul>
+            <li>
+                <a class="nav-link" href="#Introduction">Introduction</a>
+            </li>
+            <li>
+                <a class="nav-link" href="#What_you_should_already_know">What you should already know</a>
+            </li>
+            <li>
+                <a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a>
+            </li>
+            <li>
+                <a class="nav-link" href="#Hello_world">Hello world</a>
+            </li>
+            <li>
+                <a class="nav-link" href="#Variables">Variables</a>
+            </li>
+            <li>
+                <a class="nav-link" href="#Declaring_variables">Declaring variables</a>
+            </li>
+            <li>
+                <a class="nav-link" href="#Variable_scope">Variable scop</a>
+            </li>
+            <li>
+                <a class="nav-link" href="#Global_variables">Global variables</a>
+            </li>
+            <li>
+                <a class="nav-link" href="#Constants">Constants</a>
+            </li>
+            <li>
+                <a class="nav-link" href="#Data_types">Data types</a>
+            </li>
+    </ul>
     </nav>
     <main id="main-doc">
         <section class="main-section" id="Introduction">
